Fixed alignment of latency and throughput table.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -315,6 +315,14 @@ a:hover {
   height: 155px;
 }
 
+.padding-left-5 {
+  padding-left: 5px !important;
+}
+
+.padding-left-10 {
+  padding-left: 10px !important;
+}
+
 @media (max-width: 768px){
   .height-155 {
     height: auto !important;
